Remove redundant code